- fixed issue in SCIPcopyLimits() w.r.t. soft time limit
- improved handling of infinite values in a primal solution in quadratic and nonlinear constraints
- fixed bug in dynamic resizing of hashtables and hashmaps
- fixed bug in computing violation and cut for certain nonlinear constraints when LP solution is slightly out of bounds

performance improvements:
- widened a bottleneck in simplifying long signomial sums in a nonlinear constraint
- sorting of parents and children for some expression types is now independent of memory layout

SCIP version 4.0.0
==================

features:
- new Graph induced neighborhood search (GINS) primal heuristic that uses neighborhoods
  based on distances in the variable constraint connectivity graph.
  In addition, the heuristic supports a rolling horizon-like procedure to solve auxiliary problems
  for neighborhoods with increasing distance from the starting neighborhood.
- new primal heuristic LP face that tries to find an integer solution inside the optimal LP face.
- implemented linear time methods for (weighted) median selection for joint arrays of various types
- new statistic computed: "Root LP Estimate" that shows the root LP best-estimate with every pseudo-cost update
- new SCIP_REGRESSION data structure in pub_misc.h to incrementally compute a best-fit line through pairs of observations
- added leaf statistics about LP objective limit|feasible|infeasible leaves to the statistics output and
  to the callable library: SCIPgetNObjlimLeaves(), SCIPgetNFeasibleLeaves(), SCIPgetNInfeasibleLeaves()
- added adaptive solving behavior of SCIP based on solving phases and heuristic transitions, if enabled via "solvingphases/enabled"
- new presolving step for variables contained in a single quadratic constraint with proper square coefficients
- can now solve relaxations within probing
- will now enforce relaxation solution instead of lp or pseudosolution if lowerbound is better and the whole lp is included in the relaxation