@@ -8,6 +8,8 @@ fixed bugs:
 - improved handling of infinite values in a primal solution in quadratic and nonlinear constraints
 - fixed bug in dynamic resizing of hashtables and hashmaps
 - fixed bug in computing violation and cut for certain nonlinear constraints when LP solution is slightly out of bounds
+- fixed bug in binpacking example that might have led to doing the same branching several times
+- fixed memory issue in binpacking example
 
 performance improvements:
 - widened a bottleneck in simplifying long signomial sums in a nonlinear constraint
